Bug 976608 - applicationCache corrupted due to concurrent updates running (should coalesce), r=jduell